Arreglados unos fallos del programa

--- a/fotos-aleatorias.html
+++ b/fotos-aleatorias.html
@@ -7,14 +7,15 @@
 
 <body>
  	<span id="res"></span> <a href="javascript:CambiaFotos()">Pulsa y Obten un Foto Aleatoria con las fotos en el Javascript</a></p>
-  <img id="imagen" src="http://c4.staticflickr.com/8/7369/15799001574_1315f607d1_n.jpg"  style="visibility:hidden" >
+  <img id="imagen" src="http://c4.staticflickr.com/8/7369/15799001574_1315f607d1_n.jpg"  style="display:none" >
   <p></p>
   <span id="res"></span> <a href="javascript:CambiaFotosEnHTML()">Pulsa y Obten un Foto Aleatoria con las fotos en el HTML</a></p>
-  <img id="imagen1" src="http://c4.staticflickr.com/8/7369/15799001574_1315f607d1_n.jpg"  style="visibility:hidden" >
-  <img id="imagen2" src="http://c1.staticflickr.com/9/8625/15794208943_30743c6017_n.jpg"  style="visibility:hidden" >
-  <img id="imagen3" src="http://c1.staticflickr.com/9/8654/16233056440_344d792f0d_n.jpg"  style="visibility:hidden" >
-  <img id="imagen4" src="http://c2.staticflickr.com/8/7356/15795113883_e5f51a7a1b_n.jpg"  style="visibility:hidden" >
-  
+ 
+  <img id="imagen1" src="http://c1.staticflickr.com/9/8674/15808133833_44b987a6e9_n.jpg"  style="display:none" >
+  <img id="imagen2" src="http://c1.staticflickr.com/9/8625/15794208943_30743c6017_n.jpg"  style="display:none" >
+  <img id="imagen3" src="http://c1.staticflickr.com/9/8654/16233056440_344d792f0d_n.jpg"  style="display:none" >
+  <img id="imagen4" src="http://c2.staticflickr.com/8/7356/15795113883_e5f51a7a1b_n.jpg"  style="display:none">
+
   
   
 </body>
